--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   
   <div class="flex items-center justify-center font-quicksand h-screen bg-gradient-to-bl from-rose-600 to-rose-800">
     <div class="bg-white font-semibold text-center rounded-3xl border shadow-lg p-10 max-w-sm">
-      <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="\src\8c507951-2265-43fc-9e6e-756b9ae7019a.jpg" alt="frontend dev">
+      <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="\8c507951-2265-43fc-9e6e-756b9ae7019a.jpg" alt="frontend dev">
       <h1 class="text-2xl text-gray-800"> Dotun F. </h1>
       <h3 class="text-md text-slate-500 "> Frontend Developer </h3><br/><hr/>
       <p class="text-sm text-stone-900 mt-4"> I develop amazing visual experiences for users of any type of device, using various tools to achieve the magic of sleek design. </p>
